--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "serpent-vlad/Citing-Bot",
     "description": "Tools for ru:Wikipedia",
     "type": "project",
+    "version": "2.0",
     "license": "GPL-3.0+",
     "minimum-stability": "stable",
     "require": {
