--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "serpent-vlad/Citing-Bot",
     "description": "Tools for ru:Wikipedia",
     "type": "project",
-    "version": "2.0",
+    "version": "1.1.1-alpha",
     "license": "GPL-3.0+",
     "minimum-stability": "stable",
     "require": {
