--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,6 +2,7 @@ Options +FollowSymLinks
 IndexIgnore */*
 
 RewriteEngine on
+RewtiteBase /citing-bot/
 
 # if a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
