--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0",
+        "mediawiki/oauthclient": "^0.1.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
