--- a/.lighttpd.conf
+++ b/.lighttpd.conf
@@ -1,4 +1,3 @@
-url.rewrite-if-not-file  = (
-            ".*\?(.*)" => "index.php?$1",
-            "." => "index.php"
+url.rewrite-if-not-file  += (
+    "(.*)" => "/citing-bot/index.php/$0",
 )
