fix routing config

--- a/.lighttpd.conf
+++ b/.lighttpd.conf
@@ -1,3 +1,4 @@
-url.rewrite-if-not-file  += (
-    "(.*)" => "/citing-bot/index.php/$0",
+url.rewrite-once = (
+    ".*\.(assets|img|css)" => "$0",
+    "^/citing-bot(/.*)" => "/citing-bot/index.php$1"
 )
