--- a/.lighttpd.conf
+++ b/.lighttpd.conf
@@ -1,4 +1,4 @@
 url.rewrite-once = (
-    ".*\.(assets|img|css)" => "$0",
+    "^/citing-bot/(assets|img|css)/(.*)" => "/citing-bot/$0/$1",
     "^/citing-bot(/.*)" => "/citing-bot/index.php$1"
 )
