--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
+        "ext-json": "*",
+        "ext-curl": "*",
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
