--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,14 @@
     "name": "serpent-vlad/Citing-Bot",
     "description": "Tools for ru:Wikipedia",
     "type": "project",
-    "version": "1.4.1-beta",
+    "version": "1.4.4-beta",
     "license": "GPL-3.0+",
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=7.2.0",
         "ext-json": "*",
         "ext-curl": "*",
+        "ext-simplexml": "*",
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
